refactor(file-service): bridge legacy flows to file-core